--- a/11 Titanic.ipynb
+++ b/11 Titanic.ipynb
@@ -538,7 +538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Missing Values"
+    "# Filling missing values"
    ]
   },
   {
@@ -679,7 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is no obvious relationship between variable **Survived** and other dependent variables."
+    "There is no obvious relationship between variable **Survived** and other dependent, numerical variables."
    ]
   },
   {
