Missing values filling method updated

--- a/11 Titanic.ipynb
+++ b/11 Titanic.ipynb
@@ -31,8 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 50,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-24T17:51:16.099566Z",
+     "iopub.status.busy": "2020-08-24T17:51:16.099566Z",
+     "iopub.status.idle": "2020-08-24T17:51:16.115551Z",
+     "shell.execute_reply": "2020-08-24T17:51:16.114552Z",
+     "shell.execute_reply.started": "2020-08-24T17:51:16.099566Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -111,8 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 51,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-24T17:51:16.117549Z",
+     "iopub.status.busy": "2020-08-24T17:51:16.116550Z",
+     "iopub.status.idle": "2020-08-24T17:51:16.145525Z",
+     "shell.execute_reply": "2020-08-24T17:51:16.144525Z",
+     "shell.execute_reply.started": "2020-08-24T17:51:16.117549Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -252,7 +268,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,25 +286,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Joining train and 7\n",
-    "set"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We joined *test* and *train* for an easier feature manipulation.  "
+    "## Joining train and train sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-24T17:51:16.146522Z",
+     "iopub.status.busy": "2020-08-24T17:51:16.146522Z",
+     "iopub.status.idle": "2020-08-24T17:51:16.160511Z",
+     "shell.execute_reply": "2020-08-24T17:51:16.159512Z",
+     "shell.execute_reply.started": "2020-08-24T17:51:16.146522Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# join train and test datasets in order to obtain the same number of features\n",
-    "\n",
     "train_len = len(train)\n",
     "full_dataset =  pd.concat(objs=[train, test], axis=0).reset_index(drop=True)"
    ]
@@ -302,8 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-24T17:51:16.162507Z",
+     "iopub.status.busy": "2020-08-24T17:51:16.161509Z",
+     "iopub.status.idle": "2020-08-24T17:51:16.174496Z",
+     "shell.execute_reply": "2020-08-24T17:51:16.174496Z",
+     "shell.execute_reply.started": "2020-08-24T17:51:16.162507Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -323,7 +346,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,8 +368,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-24T17:51:16.176494Z",
+     "iopub.status.busy": "2020-08-24T17:51:16.175495Z",
+     "iopub.status.idle": "2020-08-24T17:51:16.187484Z",
+     "shell.execute_reply": "2020-08-24T17:51:16.186485Z",
+     "shell.execute_reply.started": "2020-08-24T17:51:16.176494Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -366,7 +397,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,8 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 55,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-24T17:51:16.188485Z",
+     "iopub.status.busy": "2020-08-24T17:51:16.187484Z",
+     "iopub.status.idle": "2020-08-24T17:51:16.234441Z",
+     "shell.execute_reply": "2020-08-24T17:51:16.233442Z",
+     "shell.execute_reply.started": "2020-08-24T17:51:16.188485Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -523,7 +562,7 @@
        "max      1.000000    3.000000   80.000000    8.000000    6.000000  512.329200"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,8 +604,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 56,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-24T17:51:16.235440Z",
+     "iopub.status.busy": "2020-08-24T17:51:16.235440Z",
+     "iopub.status.idle": "2020-08-24T17:51:17.866304Z",
+     "shell.execute_reply": "2020-08-24T17:51:17.866304Z",
+     "shell.execute_reply.started": "2020-08-24T17:51:16.235440Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -619,36 +666,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Michal\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:670: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self._setitem_with_indexer(indexer, value)\n"
-     ]
+   "execution_count": 57,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-24T17:51:20.351985Z",
+     "iopub.status.busy": "2020-08-24T17:51:20.351985Z",
+     "iopub.status.idle": "2020-08-24T17:51:20.363974Z",
+     "shell.execute_reply": "2020-08-24T17:51:20.362974Z",
+     "shell.execute_reply.started": "2020-08-24T17:51:20.351985Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# fill Age with the median age of similar rows according to Pclass, Parch and SibSp\n",
-    "# warning is showed\n",
-    "\n",
-    "index_NaN_age = list(dataset['Age'][dataset['Age'].isnull()].index)\n",
-    "\n",
-    "for i in index_NaN_age :\n",
-    "    age_med = dataset['Age'].median()\n",
-    "    age_pred = dataset['Age'][((dataset['SibSp'] == dataset.iloc[i]['SibSp']) & (dataset['Parch'] == dataset.iloc[i]['Parch']) & (dataset['Pclass'] == dataset.iloc[i]['Pclass']))].median()\n",
-    "    if not np.isnan(age_pred) :\n",
-    "        dataset['Age'].iloc[i] = age_pred\n",
-    "    else :\n",
-    "        dataset['Age'].iloc[i] = age_med\n",
-    "        \n",
-    "train['Age'] = dataset.loc[:train.shape[0]-1, 'Age']"
+    "dataset['Age'] = dataset['Age'].fillna(dataset.groupby(['SibSp', 'Parch', 'Pclass'])['Age'].transform('median'))\n",
+    "dataset['Age'] = dataset['Age'].fillna(dataset['Age'].median())"
    ]
   },
   {
@@ -3703,6 +3735,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
   },
+  "record_timing": true,
   "toc-autonumbering": true,
   "toc-showcode": false,
   "toc-showmarkdowntxt": false,
