--- a/12_Titanic.Rmd
+++ b/12_Titanic.Rmd
@@ -2,16 +2,9 @@
 title: "Titanic"
 author: "Michał Makowski"
 output: 
-  html_notebook: 
+  github_document: 
     toc: yes
     toc_depth: 2
-    highlight: pygments
-    theme: cosmo
-  html_document: 
-    toc: yes
-    toc_depth: 2
-    highlight: pygments
-    theme: cosmo
     df_print: kable
 ---
 
@@ -61,38 +54,127 @@ identical(train, train[complete.cases(train),])
 identical(test, test[complete.cases(test),])
 
 ```
+
 ```{r trainPrep}
 
-train$Pclass	<- train$Pclass %>% as.character() %>% parse_factor(sort(unique(.))) # alphabetical order of factors
-train$Sex		<- train$Sex %>% parse_factor(sort(unique(.))) # ditto
+train$Pclass	<- train$Pclass %>% factor(sort(unique(.))) # alphabetical order of factors
+train$Sex		<- train$Sex %>% factor(sort(unique(.))) # ditto
 train$Age		<- as.integer(train$Age)
 train$SibSp		<- as.integer(train$SibSp)
 train$Parch	    <- as.integer(train$Parch)
-train$Embarked	<- train$Embarked %>% parse_factor(sort(unique(.))) # ditto
+train$Embarked	<- train$Embarked %>% factor(sort(unique(.))) # ditto
 # str(train)
-# summary(train)
+summary(train)
 
 ```
 
 ```{r testPrep}
 
-test$Pclass		<- test$Pclass %>% as.character() %>% parse_factor(sort(unique(.))) # alphabetical order of factors
+test$Pclass		<- test$Pclass %>% factor(sort(unique(.))) # alphabetical order of factors
 test$Sex		<- test$Sex %>% parse_factor(sort(unique(.))) # ditto
 test$Age		<- as.integer(test$Age)
 test$SibSp		<- as.integer(test$SibSp)
 test$Parch	    <- as.integer(test$Parch)
-test$Embarked	<- test$Embarked %>% parse_factor(sort(unique(.))) # ditto
+test$Embarked	<- test$Embarked %>% factor(sort(unique(.))) # ditto
 # str(test)
-# summary(test)
+summary(test)
+
+```
+
+```{r dataJoin}
+
+fulldata <- bind_rows(mutate(train, 
+							  test = FALSE),
+					   mutate(select(test, -Survived),
+					   	   test = TRUE))
+
+```
+
+# Data quality
+
+## Missing values
+
+```{r missingValues}
+
+sapply(fulldata, function(x) sum(is.na(x))) %>% sort(decreasing = TRUE)
+sapply(train, function(x) sum(is.na(x))) %>% sort(decreasing = TRUE)
+sapply(test, function(x) sum(is.na(x))) %>% sort(decreasing = TRUE)
+
+```
+### Fare and Embarked
+
+As there are a few missing observation we decided to fill them with *mode*.
+
+```{r fillingFareEmbarked}
+
+fulldata$Fare[is.na(fulldata$Fare)] <- mode(fulldata$Fare)
+fulldata$Embarked[is.na(fulldata$Embarked)] <- mode(fulldata$Embarked)
+
+train$Fare[is.na(train$Fare)] <- mode(train$Fare)
+test$Embarked[is.na(test$Embarked)] <- mode(test$Embarked)
+
+```
+
+### Age
+
+```{r missingAge}
+
+ggplot(fulldata) +
+	geom_boxplot(aes(x = Sex, 
+					 y = Age,
+					 fill = Sex),
+				 alpha = 0.75) +
+	guides(fill = "none")
+
+ggplot(fulldata) +
+	geom_boxplot(aes(x = Sex, 
+					 y = Age,
+					 fill = Pclass),
+				 alpha = 0.75) +
+	guides(fill = "none")
+
+ggplot(fulldata) +
+	geom_boxplot(aes(x = factor(Parch), 
+					 y = Age,
+					 fill = factor(Parch)),
+				 alpha = 0.75) +
+	guides(fill = "none")
+
+ggplot(fulldata) +
+	geom_boxplot(aes(x = factor(SibSp), 
+					 y = Age,
+					 fill = factor(SibSp)),
+				 alpha = 0.75) +
+	guides(fill = "none")
+
+```
+
+```{r fillingAge}
+
+# fill Age with the median age of similar rows according to Pclass, Parch and SibSp
+
+index_NaN_age = is.na(fulldata$Age)
+	
+
+
+
+for i in index_NaN_age :
+    age_med = dataset['Age'].median()
+    age_pred = dataset['Age'][((dataset['SibSp'] == dataset.iloc[i]['SibSp']) & (dataset['Parch'] == dataset.iloc[i]['Parch']) & (dataset['Pclass'] == dataset.iloc[i]['Pclass']))].median()
+    if not np.isnan(age_pred) :
+        dataset['Age'].iloc[i] = age_pred
+    else :
+        dataset['Age'].iloc[i] = age_med
+        
+train['Age'] = dataset.loc[:train.shape[0]-1, 'Age']
+
 
 ```
 
 
-# Data quality
+## Train and Test dataset structure similarity
 
-## Customer dataset and Pilot dataset structure similarity
-
-As we wanted to build the model on the **treain** dataset and use the **test** dataset for predictions, we checked if there are any significant differences in distributions of variables between those sets. 
+As we wanted to build the model on the **train** dataset and use the **test** dataset for predictions, we checked if there are any significant differences in distributions of variables between those sets. 
 
 *We could had trusted our data provider, but at least simple visual inspection should be done.*
 
@@ -103,17 +185,13 @@ We do not present every plot, as distributions in both groups were pairwise simi
 ```{r continousSimilarityEverything}
 
 # continuous variables
-everyCase <- bind_rows(mutate(train, 
-							  test = FALSE),
-					   mutate(select(test, -Survived),
-					   	   test = TRUE))
-everyCase %>%
+fulldata %>%
 	select(where(is.double)) %>%
 	colnames() %>%
 	sapply(
 		function(X)
 		{
-			ggplot(everyCase) +
+			ggplot(fulldata) +
 				geom_area(aes(x = get(X), 
 							  y = ..density.., 
 							  fill = test,
@@ -125,7 +203,7 @@ everyCase %>%
 				labs(x = X) +
 				theme(legend.position = c(0.8, 0.8)) -> plot1
 				
-			ggplot(everyCase) +
+			ggplot(fulldata) +
 				geom_violin(aes(x = test,
 								y = get(X),
 								fill = test),
@@ -151,13 +229,13 @@ plotListContinous$Fare
 ```{r discreteSimilarityEverything}
 
 # discrete variables
-everyCase %>%
+fulldata %>%
 	select(where(is.integer)) %>%
 	colnames() %>%
 	sapply(
 		function(X)
 		{
-			ggplot(everyCase) +
+			ggplot(fulldata) +
 				geom_bar(aes(x = get(X), 
 							 y = ..prop..,
 							 fill = test,
@@ -167,7 +245,7 @@ everyCase %>%
 				labs(x = X) +
 				theme(legend.position = c(0.9, 0.8)) -> plot1
 				
-			ggplot(everyCase) +
+			ggplot(fulldata) +
 				geom_boxplot(aes(x = test, 
 								 y = get(X),
 								 fill = test),
@@ -181,13 +259,13 @@ everyCase %>%
 		USE.NAMES = TRUE
 	) -> plotListDiscrete
 
-everyCase %>%
+fulldata %>%
 	select(where(is.factor)) %>%
 	colnames() %>%
 	sapply(
 		function(X)
 		{
-			ggplot(everyCase) +
+			ggplot(fulldata) +
 				geom_bar(aes(x = get(X),
 							 y =  ..prop..,
 							 group = test,
@@ -207,10 +285,10 @@ everyCase %>%
 plotListDiscrete$Age
 plotListFactor$Pclass
 
-# table(everyCase$test, everyCase$Sex) %>%
+# table(fulldata$test, fulldata$Sex) %>%
 # 	proportions(1)
 # Proportions do not differ to much
-# table(everyCase$test, everyCase$SibSp) %>%
+# table(fulldata$test, fulldata$SibSp) %>%
 # 	proportions(1)
 # Ditto, results do not differ much.
 
@@ -222,12 +300,34 @@ Correlation analysis is quite useful when we want to interpret results and add s
 
 
 ```{r ggPairsEverything}
-
-filter(everyCase, test == FALSE) %>%
-	select(-Name, -Ticket, -Cabin, -test) %>%
-	ggpairs()
-filter(everyCase, test == TRUE) %>%
-	select(-Name, -Ticket, -Cabin, -test) %>%
-	ggpairs()
+# 
+# filter(fulldata, test == FALSE) %>%
+# 	select(-Name, -Ticket, -Cabin, -test) %>%
+# 	ggpairs()
+# filter(fulldata, test == TRUE) %>%
+# 	select(-Name, -Ticket, -Cabin, -test) %>%
+# 	ggpairs()
 
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
