--- a/12_Titanic.Rmd
+++ b/12_Titanic.Rmd
@@ -44,8 +44,8 @@ theme_set(theme_bw()) # ggplot theme
 
 ```{r dataImport, warning=TRUE}
 
-train <- read_csv("01 Data/test.csv")
-test  <- read_csv("01 Data/train.csv")
+train <- read_csv("01 Data/train.csv")
+test  <- read_csv("01 Data/test.csv")
 
 head(train)
 head(test)
@@ -84,9 +84,9 @@ summary(test)
 ```{r dataJoin}
 
 fulldata <- bind_rows(mutate(train, 
-							  test = FALSE),
-					   mutate(select(test, -Survived),
-					   	   test = TRUE))
+							  Test_subset = FALSE),
+					   mutate(test,
+					   	   Test_subset = TRUE))
 
 ```
 
@@ -151,23 +151,13 @@ ggplot(fulldata) +
 
 ```{r fillingAge}
 
-# fill Age with the median age of similar rows according to Pclass, Parch and SibSp
+fulldata %>%
+	group_by(SibSp, Parch, Pclass) %>%
+	mutate(Age = replace(Age, is.na(Age), median(Age, na.rm=TRUE))) %>%
+	ungroup() %>%
+	mutate(Age = replace(Age, is.na(Age), median(Age, na.rm=TRUE))) -> fulldata
 
-index_NaN_age = is.na(fulldata$Age)
-	
-
-
-
-for i in index_NaN_age :
-    age_med = dataset['Age'].median()
-    age_pred = dataset['Age'][((dataset['SibSp'] == dataset.iloc[i]['SibSp']) & (dataset['Parch'] == dataset.iloc[i]['Parch']) & (dataset['Pclass'] == dataset.iloc[i]['Pclass']))].median()
-    if not np.isnan(age_pred) :
-        dataset['Age'].iloc[i] = age_pred
-    else :
-        dataset['Age'].iloc[i] = age_med
-        
-train['Age'] = dataset.loc[:train.shape[0]-1, 'Age']
-
+train$Age <- fulldata$Age[train$PassengerId]
 
 ```
 
@@ -194,8 +184,8 @@ fulldata %>%
 			ggplot(fulldata) +
 				geom_area(aes(x = get(X), 
 							  y = ..density.., 
-							  fill = test,
-							  colour = test),
+							  fill = Test_subset,
+							  colour = Test_subset),
 						  alpha = 0.25,
 						  stat = "bin",
 						  bins = 93, # Rice rule
@@ -204,13 +194,13 @@ fulldata %>%
 				theme(legend.position = c(0.8, 0.8)) -> plot1
 				
 			ggplot(fulldata) +
-				geom_violin(aes(x = test,
+				geom_violin(aes(x = Test_subset,
 								y = get(X),
-								fill = test),
+								fill = Test_subset),
 							alpha = 0.15) +
-				geom_boxplot(aes(x = test, 
+				geom_boxplot(aes(x = Test_subset, 
 								 y = get(X),
-								 fill = test),
+								 fill = Test_subset),
 							 alpha = 0.75) +
 				labs(y = X) +
 				guides(fill = "none") -> plot2
@@ -238,17 +228,17 @@ fulldata %>%
 			ggplot(fulldata) +
 				geom_bar(aes(x = get(X), 
 							 y = ..prop..,
-							 fill = test,
-							 colour = test),
+							 fill = Test_subset,
+							 colour = Test_subset),
 							 alpha = 0.4,
 							 position = "identity") +
 				labs(x = X) +
 				theme(legend.position = c(0.9, 0.8)) -> plot1
 				
 			ggplot(fulldata) +
-				geom_boxplot(aes(x = test, 
+				geom_boxplot(aes(x = Test_subset, 
 								 y = get(X),
-								 fill = test),
+								 fill = Test_subset),
 							 alpha = 0.75) +
 				labs(y = X) +
 				guides(fill = "none") -> plot2
@@ -268,9 +258,9 @@ fulldata %>%
 			ggplot(fulldata) +
 				geom_bar(aes(x = get(X),
 							 y =  ..prop..,
-							 group = test,
-							 fill = test,
-							 colour = test),
+							 group = Test_subset,
+							 fill = Test_subset,
+							 colour = Test_subset),
 						 alpha = 0.25,
 						 stat = "count",
 						 position = "identity") +
@@ -285,10 +275,10 @@ fulldata %>%
 plotListDiscrete$Age
 plotListFactor$Pclass
 
-# table(fulldata$test, fulldata$Sex) %>%
+# table(fulldata$Test_subset, fulldata$Sex) %>%
 # 	proportions(1)
 # Proportions do not differ to much
-# table(fulldata$test, fulldata$SibSp) %>%
+# table(fulldata$Test_subset, fulldata$SibSp) %>%
 # 	proportions(1)
 # Ditto, results do not differ much.
 
@@ -302,17 +292,50 @@ Correlation analysis is quite useful when we want to interpret results and add s
 ```{r ggPairsEverything}
 # 
 # filter(fulldata, test == FALSE) %>%
-# 	select(-Name, -Ticket, -Cabin, -test) %>%
+# 	select(-Name, -Ticket, -Cabin, -Test_subset) %>%
 # 	ggpairs()
 # filter(fulldata, test == TRUE) %>%
-# 	select(-Name, -Ticket, -Cabin, -test) %>%
+# 	select(-Name, -Ticket, -Cabin, -Test_subset) %>%
 # 	ggpairs()
 
 ```
 
 
+### Tests
 
+The Kolmogorov-Smirnov test was conducted to confirm the visual analysis.
 
+```{r KStestEverything, warning=FALSE, paged.print=TRUE}
+
+fulldata %>%
+	select(-PassengerId, -Survived) %>%
+	select(where(is.numeric)) %>%
+	colnames() %>%
+	sapply(
+		function(X)
+		{
+			ks.test(
+				fulldata %>%
+					filter(Test_subset == TRUE) %>%
+					pull(X),
+				fulldata %>%
+					filter(Test_subset == FALSE) %>%
+					pull(X)
+				)$p.value
+		}
+	) %>%
+	{
+		Filter(function(x) x <= 0.05/length(.), .)	# Bonferonni correction 
+	}												# (level of significance/number of tests)
+
+									   
+```
+
+There is no strong evidence that the data in both groups comes from different distributions (pairwise). 
+
+### Summary 
+
+A similarity of the datasets guarantee that models builds on the **pilot** dataset should work properly on the **customer** dataset (of course only if that will be train properly). If there will be outliers, missing values and other artifacts in one of the sets there should be some feature engineering done prior to next step.
 
 
 
